src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__overflows__overflows_with_hex.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: diagnostics
---
error: This will overflow for type WORD
  ┌─ <internal>:4:30
  │
4 │             y : UINT := WORD#16#fffff;  // Not OK, should have been `ffff` not `ffff_f_`
  │                              ^^^^^^^^ This will overflow for type WORD

error: Literal 1048575 out of range (WORD)
  ┌─ <internal>:4:25
  │
4 │             y : UINT := WORD#16#fffff;  // Not OK, should have been `ffff` not `ffff_f_`
  │                         ^^^^^^^^^^^^^ Literal 1048575 out of range (WORD)


